fix multiple avatar overlapping glitch

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1850,6 +1850,8 @@ textarea {
 		}
 
 		.post-meta-avatar {
+			position: relative;
+			z-index: 1;
 			float: left;
 			display: block;
 			vertical-align: top;
